tests/fail/04_wrong_args_count.lang
функция сумма(целое а, целое б) : целое {
    вернуть а + б;
}

функция Начало() : целое {
    целое х = сумма(10); // Ошибка семантики: Неверное количество аргументов
    вернуть 0;
}
